2024-06-03T00:55:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9342583236 # 315
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
* notice: last 14d: unq all: 10 2865
* notice: prev accum: outdated-unq outdated-all / unq all: 2063 209328 / 2098 212411
* notice: next accum: outdated-unq outdated-all / unq all: 2066 209625 / 2100 212539
* notice: prev exec diff / last date diff / accum: unq all: +2 +128 -0 -49 / +2 +128 -0 -0 / 2 128
* notice: removed / changed dates: [2024-05-19] / [2024-05-20 2024-06-02]

2024-06-02T00:58:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9334451410 # 314
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-02
* notice: last 14d: unq all: 9 3039
* notice: prev accum: outdated-unq outdated-all / unq all: 2061 209031 / 2096 212281
* notice: next accum: outdated-unq outdated-all / unq all: 2063 209328 / 2098 212411
* notice: prev exec diff / last date diff / accum: unq all: +2 +130 -1 -44 / +2 +130 -0 -0 / 2 130
* notice: removed / changed dates: [2024-05-18] / [2024-05-19 2024-06-01]

2024-06-01T00:58:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9326233478 # 313
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-01
* notice: last 14d: unq all: 9 3200
* notice: prev accum: outdated-unq outdated-all / unq all: 2059 208734 / 2094 212151
* notice: next accum: outdated-unq outdated-all / unq all: 2061 209031 / 2096 212281
* notice: prev exec diff / last date diff / accum: unq all: +2 +130 -0 -50 / +2 +130 -0 -0 / 2 130
* notice: removed / changed dates: [2024-05-17] / [2024-05-18 2024-05-31]

2024-05-31T00:55:25Z: