@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-06-03T00:55:53Z",
-  "count" : 128,
-  "count_minmax" : [ 128, 128 ],
-  "count_decinc" : [ -0, +128 ],
+  "timestamp" : "2024-06-04T00:55:30Z",
+  "count" : 130,
+  "count_minmax" : [ 128, 130 ],
+  "count_decinc" : [ -0, +130 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
