@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-06-03T00:55:53Z",
-  "count_outdated" : 209625,
-  "uniques_outdated" : 2066,
-  "count" : 212539,
-  "uniques" : 2100,
+  "timestamp" : "2024-06-04T00:55:30Z",
+  "count_outdated" : 209922,
+  "uniques_outdated" : 2068,
+  "count" : 212672,
+  "uniques" : 2103,
   "clones" : [
     {
-      "timestamp": "2024-05-20T00:00:00Z",
+      "timestamp": "2024-05-21T00:00:00Z",
       "count": 248,
       "count_minmax": [ 113, 297 ],
       "count_decinc": [ 49, 297 ],
       "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
-      "timestamp": "2024-05-21T00:00:00Z",
-      "count": 297,
-      "count_minmax": [ 113, 297 ],
-      "count_decinc": [ 0, 297 ],
-      "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2024-05-22T00:00:00Z",
@@ -124,12 +115,21 @@
     },
     {
       "timestamp": "2024-06-02T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count": 130,
+      "count_minmax": [ 128, 130 ],
+      "count_decinc": [ 0, 130 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-06-03T00:00:00Z",
+      "count": 131,
+      "count_minmax": [ 131, 131 ],
+      "count_decinc": [ 0, 131 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
