@@ -1,3 +1,12 @@
+2024-06-04T00:55:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9359424832 # 316
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-04
+* notice: last 14d: unq all: 11 2701
+* notice: prev accum: outdated-unq outdated-all / unq all: 2066 209625 / 2100 212539
+* notice: next accum: outdated-unq outdated-all / unq all: 2068 209922 / 2103 212672
+* notice: prev exec diff / last date diff / accum: unq all: +3 +133 -1 -49 / +3 +131 -0 -0 / 3 131
+* notice: removed / changed dates: [2024-05-20] / [2024-05-21 2024-06-02 2024-06-03]
+
 2024-06-03T00:55:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9342583236 # 315
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-03
